--- a/app/static/style.css
+++ b/app/static/style.css
@@ -138,8 +138,6 @@ body > .main-wrapper { height: auto; min-height: 100%; }
   margin-left:2.5%;
 }
 
-
-
 /*
   Styles for user menu
 */
@@ -152,18 +150,19 @@ body > .main-wrapper { height: auto; min-height: 100%; }
 }
 
 .user-menu li{
+  margin-left: 2%;
   text-align: center;
 }
 
-.welcome-msg{
-  font-family: Gauntlet, Helvetica;
-  font-size: 12pt;
-  font-weight: 600;
+.logout-btn{
+  width: 50%;
+  float: right;
+  margin-right: 2%;
 }
 
-.logout-btn{
-  margin-right: 2%;
-  margin-top: 0.5%;  
+.welcome-msg{
+  font-family: Helvetica;
+  font-size: 10pt;
 }
 
 .nav-buttons{
@@ -176,7 +175,7 @@ body > .main-wrapper { height: auto; min-height: 100%; }
   margin-left: auto;
   margin-right: auto;
   background-image: url('landing_bg.jpg');
-  background-position: top center;
+  background-position: top left;
   width: 100%;
 }
 
@@ -200,4 +199,11 @@ body > .main-wrapper { height: auto; min-height: 100%; }
 .sticky-footer-content span{
   margin-right: 10px;
   font-size: 10pt;
+}
+
+/* GEO MAP STYLING */
+#Geomap{
+  width: 700px; 
+  min-height: 400px;
+  margin: 2% auto 2% auto;
 }
