Remove text shadow

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,7 +14,7 @@
 <div class="clearfix">
 	<div class="landing-content">
 		<div class="col-md-3 column lcontent">
-			<h3><span class="glyphicon glyphicon-cloud head-icons"></span> About ClaraLytics </h3>
+			<h3><span class="glyphicon glyphicon-cloud head-icons"></span> About </h3>
 			<p>ClaraLytics is a free web-based dashboard that visualizes your Google Analytics data beautifully.</p>
 		</div>
 				<div class="col-md-1 column">
